tests/golden/type_errors/map_remove_member_non_map.err
Type error at 1:15: remove expects map receiver, got [number]
  [1].remove("a");
                ^
